# pica

./: .cursorrules  .gitignore  README.md  README_ja.md  cursor.py  example_simple.py  pyproject.toml  temp_work.md
docs/: support.md
example/: example_basic.py  example_simple.py  orders.csv  users.csv
src/pica/: __init__.py  connection.py  cursor.py  lazy_loader.py
tests/: test_connection.py  test_create_table.py  test_cursor.py  test_drop_table.py  test_example_basic.py  test_lazy_loading.py  test_result.md
