[project]
name = "pica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fireducks>=1.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
    "pandas>=2.2.3",
    "sqlparse>=0.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",  # カバレッジレポート用
    "black>=24.2.0",      # コードフォーマット用
    "isort>=5.13.0",      # importの整理用
    "mypy>=1.8.0",        # 型チェック用
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
